--- a/frosti.config.yaml
+++ b/frosti.config.yaml
@@ -61,7 +61,7 @@ site:
 
 # 用户的个人信息
 user:
-  name: EveSunMaple # 用户名
+  name: SixdayC # 用户名
   site: "https://frosti.saroprock.com" # 用户的网站链接
   avatar: /profile.png # 用户头像路径
   sidebar: # 侧边栏配置
