--- a/frosti.config.yaml
+++ b/frosti.config.yaml
@@ -1,9 +1,9 @@
 # 网站的基本信息
 site:
-  tab: Carpe diem .size the day # 浏览器标签栏上显示的文本
-  title: 💠 sixdayC's blog # 网站的标题
+  tab: Carpe diem # 浏览器标签栏上显示的文本
+  title: sixdayc's blog # 网站的标题
   description: 意识到会不说再见地离别，才学会珍惜生命的每一天。--SunMaple # 网站的描述，用于SEO等
-  language: cn # 网站的语言，例如 "en" 是英文
+  language: zh # 网站的语言，例如 "en" 是英文
   favicon: /favicon.ico # 网站的图标，用于浏览器标签栏和其他地方显示
   theme: # 更多主题 https://daisyui.com/docs/themes/
     light: winter # 主题的浅色模式
@@ -62,7 +62,7 @@ site:
 # 用户的个人信息
 user:
   name: SixdayC # 用户名
-  site: "https://sixdayc.vercel.app/" # 用户的网站链接
+  site: "https://www.sixdayc.top/" # 用户的网站链接
   avatar: /profile.png # 用户头像路径
   sidebar: # 侧边栏配置
     social:
