--- a/frosti.config.yaml
+++ b/frosti.config.yaml
@@ -4,7 +4,7 @@ site:
   title: sixdayc's blog # 网站的标题
   description: 意识到会不说再见地离别，才学会珍惜生命的每一天。--SunMaple # 网站的描述，用于SEO等
   language: zh # 网站的语言，例如 "en" 是英文
-  favicon: /favicon.ico # 网站的图标，用于浏览器标签栏和其他地方显示
+  favicon: /o2.ico # 网站的图标，用于浏览器标签栏和其他地方显示
   theme: # 更多主题 https://daisyui.com/docs/themes/
     light: winter # 主题的浅色模式
     dark: dracula # 主题的深色模式
