--- a/frosti.config.yaml
+++ b/frosti.config.yaml
@@ -55,7 +55,7 @@ site:
       target: _self
     - id: contact
       text: Contact
-      href: "mailto:contact.evesunmaple@outlook.com"
+      href: "mailto:sixdayc@gmail.com"
       target: _blank # 在新标签页打开
       svg: "material-symbols:attach-email-outline-rounded"
 
