--- a/frosti.config.yaml
+++ b/frosti.config.yaml
@@ -48,12 +48,16 @@ site:
       href: /friend
       svg: "material-symbols:supervisor-account-outline-rounded"
       target: _self
+    - id: board
+      text: Message Board
+      href: /board
+      svg: "material-symbols:message-rounded"
+      target: _self
     - id: contact
       text: Contact
       href: "mailto:sixdayc@gmail.com"
       target: _blank # 在新标签页打开
       svg: "material-symbols:attach-email-outline-rounded"
-
 # 用户的个人信息
 user:
   name: SixdayC # 用户名
